# ImageClassifier

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  Image_Classifier.iss  README.md  Release.bat  build-and-sign.bat  image-classifier.py  package.json  pyproject.toml  requirements.txt  run.py  version.txt
.cursor/rules/: git-branch-gate.mdc  git-commit-push-gate.mdc  version-update-checklist.mdc
.github/workflows/: deploy-cloudflare.yml
.sdd/roles/: architect.md
docs/: ARCHITECTURE-REVIEW-DOWNLOAD-LINK.md  AUTOMATED-WORKFLOW.md  BUILD.md  CORRECT-WORKFLOW.md  _redirects  changelog.html  index.html  release_notes.txt
docs/guides/: GIT-PROTOCOL.md  GITHUB-PR-SETTINGS.md  GITHUB-RELEASE-SETUP.md  RELEASE-PROTOCOL.md
docs/screenshots/: README.md
docs/troubleshooting/: COLOR-DIAGNOSIS.md
image_classifier/: __init__.py  __main__.py  app.py  config.py  shell_win.py
image_classifier/i18n/: __init__.py  translations.py
image_classifier/imaging/: __init__.py  loader.py  sharpen.py
image_classifier/ui/: __init__.py  dialogs.py  floating_menu.py  icons.py  widgets.py
image_classifier/workers/: __init__.py  delete_worker.py  export_worker.py  sharpen_thread.py
installer/: README.txt
scripts/: auto_update_changelog.py  benchmark_image_pipeline.py  bump_version.py  create_github_release.py  release.py  sign_exe.py  update_changelog.py  update_iss_version.py  update_website.py
tests/: __init__.py  conftest.py  test_config.py  test_folder_loading.py  test_i18n.py  test_imaging.py  test_release_scripts.py
