[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "image-classifier"
version = "2.0"
description = "Desktop app for organizing photos and choosing favorites"
readme = "README.md"
license = { text = "All rights reserved" }
authors = [{ name = "Francisco Villanueva" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["image_classifier*"]
